2011-07-20 Lorenzo Natale <lorenzo.natale@iit.it>
    * src/libYARP_OS/src/RFModule.cpp
    * src/libYARP_OS/src/Time.cpp
    Fix timers not working precisely on Windows (Windows 7)
    
2011-07-20  Marco Randazzo    <marco.randazzo@iit.it>

	* src/libYARP_dev/src/ServerControlBoard.cpp
	added getTorque() / getTorques() in YARP ServerControlBoard.
	
2011-07-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/TestFrameGrabber.cpp: simplify testing
	the IPreciselyTimed interface by making the timestamps of
	test frames be "coincidentally" NNN.NNN42 - if these timestamps
	ever get replaced by network transmission timestamps, this
	should now be obvious.

2011-07-19  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarpserver/src/ConnectThread.h: fix persistent connections
	for ports that weren't shut down correctly.

2011-07-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: wrap yarp/os/Vocab.h correctly, using
	a different workaround for a SWIG bug - macros with
	character arguments seem to get messed up [thanks Juan G Victores]

2011-07-11  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/yarp_with_ros.dox: first pass at documenting use of 
	YARP with ROS.

	* src/libYARP_OS/src/Companion.cpp: support "yarp detect --ros"
	to run yarp on a ros name server.  Experimental.

	* src/libYARP_OS/src/Network.cpp et al: activate multiple name
	server support.

	* src/libYARP_OS/src/Port.cpp: support local allocation of 
	socket port numbers, for use with name servers that don't
	allocate them.

	* src/libYARP_OS/src/MultiNameSpace.cpp et al: apply patch
	supporting multiple namespaces.  Not yet activated.

	* conf/YarpSystemCheck.cmake: add tests for constructing NetInt64
	and NetFloat32 types.

	* conf/YarpVersion.cmake: bump version number to 2.3.6

2011-07-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/rpc_ports.dox: fix documentation to show rpc client
	instead of duplicating rpc server [thanks Ugo Pattacini]
