@@ -1,3 +1,15 @@
+2011-07-21 Marco Randazzo    <marco.randazzo@iit.it>
+	
+	* src/libYARP_dev/src/ServerControlBoard.cpp
+	iControlMode interface is now implemented
+	
+	* src/libYARP_dev/src/RemoteControlBoard.cpp
+	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
+	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
+	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
+	Old methods of yarp::dev::IImpedanceControl have been removed (see 2011-05-26 changelog)
+	Fixed a mismatch between yarp and icub VOCABS for yarp::dev::IControlMode interface
+	
 2011-07-20 Lorenzo Natale <lorenzo.natale@iit.it>
     * src/libYARP_OS/src/RFModule.cpp
     * src/libYARP_OS/src/Time.cpp
